---
source: tests/main.rs
expression: stdout
---
Found 66 mutants to test
ok       Unmutated baseline
ok       src/arc.rs:4:5: replace return_arc -> Arc<String> with Arc::new(String::new())
ok       src/arc.rs:4:5: replace return_arc -> Arc<String> with Arc::new("xyzzy".into())
ok       src/inside_mod.rs:4:13: replace outer::inner::name -> &'static str with ""
ok       src/inside_mod.rs:4:13: replace outer::inner::name -> &'static str with "xyzzy"
ok       src/methods.rs:17:9: replace Foo::double with ()
ok       src/methods.rs:17:16: replace *= with += in Foo::double
ok       src/methods.rs:17:16: replace *= with /= in Foo::double
ok       src/methods.rs:23:9: replace <impl Display for Foo>::fmt -> fmt::Result with Ok(Default::default())
ok       src/methods.rs:29:9: replace <impl Debug for &Foo>::fmt -> fmt::Result with Ok(Default::default())
ok       src/nested_function.rs:2:5: replace has_nested -> u32 with 0
ok       src/nested_function.rs:2:5: replace has_nested -> u32 with 1
ok       src/nested_function.rs:3:9: replace has_nested::inner -> u32 with 0
ok       src/nested_function.rs:3:9: replace has_nested::inner -> u32 with 1
ok       src/nested_function.rs:5:13: replace * with + in has_nested
ok       src/nested_function.rs:5:13: replace * with / in has_nested
ok       src/numbers.rs:2:5: replace double_float -> f32 with 0.0
ok       src/numbers.rs:2:5: replace double_float -> f32 with 1.0
ok       src/numbers.rs:2:5: replace double_float -> f32 with -1.0
ok       src/numbers.rs:2:9: replace * with + in double_float
ok       src/numbers.rs:2:9: replace * with / in double_float
ok       src/numbers.rs:6:5: replace is_double -> bool with true
ok       src/numbers.rs:6:5: replace is_double -> bool with false
ok       src/numbers.rs:6:7: replace == with != in is_double
ok       src/numbers.rs:6:12: replace * with + in is_double
ok       src/numbers.rs:6:12: replace * with / in is_double
ok       src/result.rs:6:5: replace simple_result -> Result<&'static str, ()> with Ok("")
ok       src/result.rs:6:5: replace simple_result -> Result<&'static str, ()> with Ok("xyzzy")
ok       src/result.rs:10:5: replace error_if_negative -> Result<(), ()> with Ok(())
ok       src/result.rs:10:10: replace < with == in error_if_negative
ok       src/result.rs:10:10: replace < with > in error_if_negative
ok       src/result.rs:18:5: replace result_with_no_apparent_type_args -> std::fmt::Result with Ok(Default::default())
ok       src/sets.rs:4:5: replace make_a_set -> BTreeSet<String> with BTreeSet::new()
ok       src/sets.rs:4:5: replace make_a_set -> BTreeSet<String> with BTreeSet::from_iter([String::new()])
ok       src/sets.rs:4:5: replace make_a_set -> BTreeSet<String> with BTreeSet::from_iter(["xyzzy".into()])
ok       src/simple_fns.rs:8:5: replace returns_unit with ()
ok       src/simple_fns.rs:8:8: replace += with -= in returns_unit
ok       src/simple_fns.rs:8:8: replace += with *= in returns_unit
ok       src/simple_fns.rs:13:5: replace returns_42u32 -> u32 with 0
ok       src/simple_fns.rs:13:5: replace returns_42u32 -> u32 with 1
ok       src/simple_fns.rs:18:5: replace divisible_by_three -> bool with true
ok       src/simple_fns.rs:18:5: replace divisible_by_three -> bool with false
ok       src/simple_fns.rs:18:11: replace == with != in divisible_by_three
ok       src/simple_fns.rs:18:7: replace % with / in divisible_by_three
ok       src/simple_fns.rs:18:7: replace % with + in divisible_by_three
ok       src/simple_fns.rs:27:5: replace double_string -> String with String::new()
ok       src/simple_fns.rs:27:5: replace double_string -> String with "xyzzy".into()
ok       src/slices.rs:4:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(Vec::new())
ok       src/slices.rs:4:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Borrowed("")])
ok       src/slices.rs:4:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Owned("".to_owned())])
ok       src/slices.rs:4:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Borrowed("xyzzy")])
ok       src/slices.rs:4:5: replace pad -> &'a[Cow<'static, str>] with Vec::leak(vec![Cow::Owned("xyzzy".to_owned())])
ok       src/slices.rs:5:20: replace < with == in pad
ok       src/slices.rs:5:20: replace < with > in pad
ok       src/slices.rs:13:5: replace return_mut_slice -> &mut[usize] with Vec::leak(Vec::new())
ok       src/slices.rs:13:5: replace return_mut_slice -> &mut[usize] with Vec::leak(vec![0])
ok       src/slices.rs:13:5: replace return_mut_slice -> &mut[usize] with Vec::leak(vec![1])
ok       src/slices.rs:14:12: replace *= with += in return_mut_slice
ok       src/slices.rs:14:12: replace *= with /= in return_mut_slice
ok       src/static_item.rs:1:33: replace == with !=
ok       src/static_item.rs:1:39: replace + with -
ok       src/static_item.rs:1:39: replace + with *
ok       src/struct_with_lifetime.rs:15:9: replace Lex<'buf>::buf_len -> usize with 0
ok       src/struct_with_lifetime.rs:15:9: replace Lex<'buf>::buf_len -> usize with 1
ok       src/traits.rs:5:9: replace Something::is_three -> bool with true
ok       src/traits.rs:5:9: replace Something::is_three -> bool with false
ok       src/traits.rs:5:11: replace == with != in Something::is_three
66 mutants tested: 66 succeeded

